Fix incorrect 'view in github' link
Signed-off-by: Gris Ge <cnfourt@gmail.com>

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,10 @@
         <h2>{{ page.title }}</h2>
 
         <section id="downloads">
-          <a href="https://github.com/cathay4t" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+          <a href="https://github.com/cathay4t/cathay4t.github.io" 
+             class="btn btn-github">
+                <span class="icon"></span>View on GitHub
+          </a>
         </section>
       </div>
     </header>
