--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,38 +1,46 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <head>
+        <meta charset='utf-8'>
+        <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+        <link 
+            rel="stylesheet" type="text/css" 
+            href="{{ site.github.url }}/stylesheets/stylesheet.css" 
+            media="screen">
+        <link 
+            rel="stylesheet" type="text/css" 
+            href="{{ site.github.url }}/stylesheets/pygment_trac.css"
+            media="screen">
+        <link 
+            rel="stylesheet" type="text/css" 
+            href="{{ site.github.url }}/stylesheets/print.css"
+            media="print">
 
-    <title>{{ page.title }}</title>
-  </head>
+        <title>{{ page.title }}</title>
+    </head>
 
-  <body>
+    <body>
+        <header>
+            <div class="container">
+                <h1>{{ page.path }}</h1>
+                <h2>
+                    <a href="{{ site.github.url }}/">Home Page</a>
+                </h2>
 
-    <header>
-      <div class="container">
-        <h1>
-            <a href="{{ site.github.url }}/">Fatal exception</a>
-        </h1>
-        <h2>{{ page.title }}</h2>
-
-        <section id="downloads">
-          <a href="https://github.com/cathay4t/cathay4t.github.io" 
-             class="btn btn-github">
-                <span class="icon"></span>View on GitHub
-          </a>
-        </section>
-      </div>
-    </header>
-
-    <div class="container">
-      <section id="main_content">
-        {{ content }}
-      </section>
-    </div>
-  </body>
+                <section id="downloads">
+                    <a 
+                        href="https://github.com/cathay4t/cathay4t.github.io/blob/master/{{ page.path }}"
+                        class="btn btn-github">
+                        <span class="icon"></span>View on GitHub
+                    </a>
+                </section>
+            </div>
+        </header>
+        <div class="container">
+            <section id="main_content">
+                {{ content }}
+            </section>
+        </div>
+    </body>
 </html>
