Add contact me button.
Signed-off-by: Gris Ge <cnfourt@gmail.com>

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,11 @@
                         class="btn btn-github">
                         <span class="icon"></span>View on GitHub
                     </a>
+                    <a 
+                        href="https://github.com/cathay4t/cathay4t.github.io/issues"
+                        class="btn btn-github">
+                        <span class="icon"></span>Contact Me
+                    </a>
                 </section>
             </div>
         </header>
